--- a/Codebase/Typerr/View/CreateTestView.xaml
+++ b/Codebase/Typerr/View/CreateTestView.xaml
@@ -38,22 +38,56 @@
                    FontWeight="Bold"
                    FontSize="24"
                    />
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition Height="20"/>
+                </Grid.RowDefinitions>
+            
             <TextBox x:Name="TextAreaBox" 
                      TextWrapping="Wrap" 
                      AcceptsReturn="True" 
                      VerticalScrollBarVisibility="Auto" 
                      Padding="10"
-                     Grid.Row="1"
+                     Grid.Row="0"
                      MinHeight="400"
+                     Margin="10 10 10 0"
                      GotFocus="TextAreaBox_GotFocus"
                      LostFocus="TextAreaBox_LostFocus"
-                     MinWidth="400"
-                     Text="{Binding TextArea, UpdateSourceTrigger=PropertyChanged}">
+                     MinWidth="400">
+                <TextBox.Style>
+                    <Style>
+                        <Setter Property="Validation.ErrorTemplate">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <DockPanel>
+                                        <TextBlock DockPanel.Dock="Bottom"
+                                       Foreground="Red"
+                                       FontSize="12"
+                                       Text="{Binding ElementName=placeholder, 
+                                       Path= AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
+                                        <AdornedElementPlaceholder x:Name="placeholder"/>
+                                    </DockPanel>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </TextBox.Style>
+                <TextBox.Text>
+                    <Binding NotifyOnValidationError="True" 
+                          UpdateSourceTrigger="PropertyChanged" 
+                              ValidatesOnExceptions="True"
+                              Path="TextArea">
+                        <Binding.ValidationRules>
+                            <local:TextAreaValidationError ValidatesOnTargetUpdated="True" />
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
                 <TextBox.ToolTip>
                     Paste a URL here to generate a test (Ctrl+V or from the Right-Click Menu)
                 </TextBox.ToolTip>
             </TextBox>
-
+            </Grid>
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
@@ -276,10 +310,58 @@
             </ScrollViewer>
             <Button Grid.Row="2"
                     Content="Create Test"
-                    Style="{StaticResource PrimaryButtonTheme}"
                     Command="{Binding CreateCommand}"
                     HorizontalAlignment="Right"
                     IsEnabled="{Binding CreateButtonEnabled, UpdateSourceTrigger=PropertyChanged}">
+                <Button.Style>
+                    <Style TargetType="Button">
+
+                        <Setter Property="Foreground" Value="White"/>
+                        <Setter Property="FontWeight" Value="Medium"/>
+                        <Setter Property="FontSize" Value="15"/>
+                        <Setter Property="Margin" Value="10"/>
+                        <Setter Property="Padding" Value="10"/>
+                        <Setter Property="BorderThickness" Value="0"/>
+
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border x:Name="Border" 
+                                    Background="{TemplateBinding Background}"
+                                    CornerRadius="5">
+                                        <ContentPresenter HorizontalAlignment="Center" 
+                                                  VerticalAlignment="Center"
+                                                  Margin="10"/>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsEnabled"
+                                         Value="True">
+                                            <Setter Property="Background"
+                                            Value="#2d9bf0"/>
+                                        </Trigger>
+                                        <Trigger Property="IsMouseOver" 
+                                         Value="True">
+                                            <Setter Property="Background" 
+                                            Value="#32a6ff"/>
+                                        </Trigger>
+                                        <Trigger Property="IsPressed" 
+                                         Value="True">
+                                            <Setter Property="Background" 
+                                            Value="#2374b2"/>
+                                        </Trigger>
+
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding ElementName=TextAreaBox, Path=(Validation.HasError)}"
+                                         Value="True">
+                                <Setter Property="IsEnabled" Value="False"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
             </Button>
         </Grid>
     </Grid>
