--- a/Codebase/Typerr/View/CreateTestView.xaml
+++ b/Codebase/Typerr/View/CreateTestView.xaml
@@ -49,6 +49,7 @@
                      AcceptsReturn="True" 
                      VerticalScrollBarVisibility="Auto" 
                      Padding="10"
+                     BorderBrush="{Binding TextAreaBrush}"
                      Grid.Row="0"
                      MinHeight="400"
                      Margin="10 10 10 0"
@@ -84,7 +85,8 @@
                     </Binding>
                 </TextBox.Text>
                 <TextBox.ToolTip>
-                    Paste a URL here to generate a test (Ctrl+V or from the Right-Click Menu)
+                        <Binding Path="TextAreaToolTip"
+                             UpdateSourceTrigger="PropertyChanged"/>
                 </TextBox.ToolTip>
             </TextBox>
             </Grid>
@@ -312,6 +314,7 @@
                     Content="Create Test"
                     Command="{Binding CreateCommand}"
                     HorizontalAlignment="Right"
+                    ToolTipService.ShowOnDisabled="True"
                     IsEnabled="{Binding CreateButtonEnabled, UpdateSourceTrigger=PropertyChanged}">
                 <Button.Style>
                     <Style TargetType="Button">
@@ -362,6 +365,10 @@
                         </Style.Triggers>
                     </Style>
                 </Button.Style>
+                <Button.ToolTip>
+                        <Binding Path="CreateTestButtonToolTip"
+                             UpdateSourceTrigger="PropertyChanged"/>
+                </Button.ToolTip>
             </Button>
         </Grid>
     </Grid>
