--- a/Codebase/Typerr/View/CreateTestView.xaml
+++ b/Codebase/Typerr/View/CreateTestView.xaml
@@ -43,8 +43,8 @@
                     <RowDefinition/>
                     <RowDefinition Height="20"/>
                 </Grid.RowDefinitions>
-            
-            <TextBox x:Name="TextAreaBox" 
+                
+                <TextBox x:Name="TextAreaBox" 
                      TextWrapping="Wrap" 
                      AcceptsReturn="True" 
                      VerticalScrollBarVisibility="Auto" 
@@ -88,6 +88,14 @@
                              UpdateSourceTrigger="PropertyChanged"/>
                 </TextBox.ToolTip>
             </TextBox>
+                <fa:FontAwesomeIcon Foreground="{StaticResource AppTheme}"
+                                    Grid.Row="0"
+                                    Width="200"
+                                    Height="200"
+                                    Visibility="{Binding LoadingAnimationVisibility}"
+                                    FontSize="30"
+                                    SolidIcon="Spinner"
+                                    AnimationType="Spin"/>
             </Grid>
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
