Api request limit, binding errors from validation fixed, refactoring of CreateTestViewModel

--- a/Codebase/Typerr/View/CreateTestView.xaml
+++ b/Codebase/Typerr/View/CreateTestView.xaml
@@ -48,6 +48,7 @@
                      TextWrapping="Wrap" 
                      AcceptsReturn="True" 
                      VerticalScrollBarVisibility="Auto" 
+                     PreviewKeyDown="TextAreaBox_PreviewKeyDown"
                      Padding="10"
                      BorderBrush="{Binding TextAreaBrush}"
                      Grid.Row="0"
