--- a/Codebase/Typerr/View/CreateTestView.xaml
+++ b/Codebase/Typerr/View/CreateTestView.xaml
@@ -36,8 +36,7 @@
             <Label Grid.Row="0" 
                    Content="Create a New Test"
                    FontWeight="Bold"
-                   FontSize="24"
-                   />
+                   FontSize="24"/>
             <Grid Grid.Row="1">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
