--- a/Codebase/Typerr/Components/SubTile.xaml
+++ b/Codebase/Typerr/Components/SubTile.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Typerr.Components" xmlns:viewmodel="clr-namespace:Typerr.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:SubTileViewModel}"
+             xmlns:local="clr-namespace:Typerr.Components" 
+             xmlns:viewmodel="clr-namespace:Typerr.ViewModel" 
+             d:DataContext="{d:DesignInstance Type=viewmodel:SubTileViewModel}"
              mc:Ignorable="d">
     <Border Width="150"
             Height="150"
@@ -12,18 +14,14 @@
             Margin="0,0,10,0"
             CornerRadius="30">
         <Border.Background>
-            <ImageBrush ImageSource="{Binding Image, UpdateSourceTrigger=PropertyChanged}"/>
+            <ImageBrush ImageSource="{Binding Image, UpdateSourceTrigger=PropertyChanged}" 
+                        Stretch="UniformToFill"/>
         </Border.Background>
 
-        <Border Width="auto"
-                Height="auto"
-                CornerRadius="30"
+        <Border CornerRadius="30"
                 Background="#88EBEBEB">
-            <Grid Width="auto" 
-                  Height="auto">
-                <Button Width="auto"
-                        Height="auto"
-                        OpacityMask="#222"
+            <Grid>
+                <Button OpacityMask="#222"
                         BorderThickness="0"
                         Command="{Binding SubTileCommand}">
                     <Button.Resources>
@@ -83,15 +81,14 @@
                         <Border Grid.Row="0"
                                 VerticalAlignment="Bottom">
                             <TextBlock Padding="5 0"
+                                       TextAlignment="Center"
                                Foreground="Black"
                                FontSize="20"
                                FontWeight="Bold"
-                               HorizontalAlignment="Stretch"
-                               VerticalAlignment="Stretch"
                                Width="110" 
                                TextTrimming="CharacterEllipsis"
-                               TextWrapping="NoWrap"
-                               Text="{Binding Name}"/>
+                               TextWrapping="Wrap"
+                               Text="{Binding Name}" Height="110" Margin="5,0,5,0"/>
                         </Border>
                     </Grid>
                 </Button>
