--- a/Codebase/Typerr/View/AddSubscriptionView.xaml
+++ b/Codebase/Typerr/View/AddSubscriptionView.xaml
@@ -5,10 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Typerr.View" xmlns:fa="clr-namespace:Meziantou.WpfFontAwesome;assembly=Meziantou.WpfFontAwesome" xmlns:viewmodel="clr-namespace:Typerr.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:AddSubscriptionViewModel}"
              mc:Ignorable="d">
-    <Grid Background="White" Width="600" Height="140">
+    <Grid Background="White" Width="600" Height="210">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
-            <RowDefinition/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0" 
                Content="Add a new Subcription"
@@ -17,19 +18,44 @@
                FontSize="24"/>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0"
+                   Content="Name"
+                   Foreground="{Binding NameLabelForeground}"
+                   FontSize="14"
+                   Margin="10"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Right"/>
+            <TextBox Grid.Column="1"
+                     Name="NameBox"
+                 Padding="10"
+                 Margin="20"
+                 Height="42"
+                 IsEnabled="{Binding NameFieldEnabled, UpdateSourceTrigger=PropertyChanged}"
+                 Text="{Binding NameField, UpdateSourceTrigger=PropertyChanged}"/>
+        </Grid>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="110"/>
             </Grid.ColumnDefinitions>
 
             <TextBox Grid.Column="0"
+                     Name="RssBox"
                  Padding="10"
+                     GotFocus="TextBox_GotFocus"
+                     LostFocus="TextBox_LostFocus"
+                     PreviewKeyDown="TextBox_PreviewKeyDown"
                  Margin="20"
                  Height="42"
-                 Text="Hello"/>
+                 Text="{Binding RssField, UpdateSourceTrigger=PropertyChanged}"/>
 
-            <Button Content="Subscribe"
+            <Button Content="{Binding ButtonText, UpdateSourceTrigger=PropertyChanged}"
                     Height="45"
                     Grid.Column="1"
+                    Command="{Binding ButtonCommand, UpdateSourceTrigger=PropertyChanged}"
                   Style="{StaticResource PrimaryButtonTheme}"/>
         </Grid>
         <Button Grid.Row="0"
